--- a/package.json
+++ b/package.json
@@ -30,5 +30,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "5.x",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-sarpik": "0.2.3",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-monorepo": "^0.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "prettier": "^1.16.4",
+    "typescript": "^3.7.3"
   }
 }
